--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=school-app-api
+
+spring.webflux.cors.allowed-origins=http://localhost:3000
+spring.webflux.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.webflux.cors.allowed-headers=*
+spring.webflux.cors.allow-credentials=true
+
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:3000
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+
+#JWT INFO
+jwt.secret=jKYq3yXj8OYwFNhP8tDZ/Nq9rzM3tb1P2TAFpVgZjEw=
+jwt.expiration=3600000
+
+# SP
+GET_CLASS_WISE_CHART_SP=sp_class_wise_chart
